tests/NormalTests/paczka1/small_fuzzy/46242521.err
Error in line 1: Yw1ZOmx S480 10,4
Error in line 2: gryVcegxN S907 87,9
